tests/baselines/reference/standaloneBreak.errors.txt
tests/cases/compiler/standaloneBreak.ts(1,1): error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.


==== tests/cases/compiler/standaloneBreak.ts (1 errors) ====
    break;
    ~~~~~~
!!! error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.